// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Input / Radio Default 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  width: 18px;
  height: 18px;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c7::before,
.c7::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c7::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c7::after {
  width: 11px;
  height: 11px;
}

.c2 {
  position: relative;
}

.c2:hover .c6 {
  border-color: #4B4B46;
}

.c5 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c5:checked + .c6::after {
  background: #0046FF;
}

.c5[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6::after {
  background: #EBEBE8;
}

.c5:focus + .c6::before {
  border: 1px solid #0046FF;
}

.c9 {
  padding-left: 8px;
  white-space: initial;
}

.c0 {
  width: auto;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1 c2"
    hidden={false}
  >
    <span
      className="c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          name="example"
          type="radio"
          value="green"
        />
        <div
          className="c6 c7"
        />
        <span
          className="c8 c9"
        >
          Green
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Input / Radio Disabled 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
  background-color: transparent;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Disabled
    </span>
  </div>,
  .c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  width: 18px;
  height: 18px;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c11::before,
.c11::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c11::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c11::after {
  width: 11px;
  height: 11px;
}

.c6 {
  position: relative;
}

.c6:hover .c10 {
  border-color: #4B4B46;
}

.c9 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c9:checked + .c10::after {
  background: #0046FF;
}

.c9[disabled] + .c10 {
  border-color: #EBEBE8;
}

.c9:checked[disabled] + .c10 {
  border-color: #EBEBE8;
}

.c9:checked[disabled] + .c10::after {
  background: #EBEBE8;
}

.c9:focus + .c10::before {
  border: 1px solid #0046FF;
}

.c13 {
  padding-left: 8px;
  white-space: initial;
}

.c4 {
  width: auto;
  display: inline-block;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
        >
          Checked
        </span>
      </div>
      <div>
        <div
          className="c4"
        >
          <label
            className="c5 c6"
            hidden={false}
          >
            <span
              className="c7"
            >
              <div
                className="c8"
              >
                <input
                  className="c9"
                  defaultChecked={true}
                  disabled={true}
                  name="example"
                  type="radio"
                  value="green"
                />
                <div
                  className="c10 c11"
                />
                <span
                  className="c12 c13"
                >
                  Green
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
        >
          Not Checked
        </span>
      </div>
      <div>
        <div
          className="c4"
        >
          <label
            className="c5 c6"
            hidden={false}
          >
            <span
              className="c7"
            >
              <div
                className="c8"
              >
                <input
                  className="c9"
                  disabled={true}
                  name="example"
                  type="radio"
                  value="blue"
                />
                <div
                  className="c10 c11"
                />
                <span
                  className="c12 c13"
                >
                  Blue
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
  background-color: transparent;
}

@media (min-width:760px) {

}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules / Input / Radio In a group 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -10px;
  margin-right: -10px;
}

.c6 > * {
  padding-left: 10px;
  padding-right: 10px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
  cursor: auto;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  width: 18px;
  height: 18px;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c11::before,
.c11::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c11::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c11::after {
  width: 11px;
  height: 11px;
}

.c8 {
  position: relative;
}

.c8:hover .c10 {
  border-color: #4B4B46;
}

.c9 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c9:checked + .c10::after {
  background: #0046FF;
}

.c9[disabled] + .c10 {
  border-color: #EBEBE8;
}

.c9:checked[disabled] + .c10 {
  border-color: #EBEBE8;
}

.c9:checked[disabled] + .c10::after {
  background: #EBEBE8;
}

.c9:focus + .c10::before {
  border: 1px solid #0046FF;
}

.c13 {
  padding-left: 8px;
  white-space: initial;
}

.c1 {
  padding: 0;
  margin: 0;
  border: 0;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c7 {
  width: auto;
  display: inline-block;
}

<div
  className="c0"
>
  <fieldset
    className="c1"
  >
    <div
      className="c2"
    >
      <legend
        className="NormalizedLegend__Legend-sc-1svgb20-0 c3 c4"
        hidden={false}
      >
        <span
          className="c5"
        >
          Colors 
        </span>
      </legend>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <label
          className="c4 c8"
          hidden={false}
        >
          <span
            className="c5"
          >
            <div
              className="c2"
            >
              <input
                className="c9"
                name="example"
                type="radio"
                value="green"
              />
              <div
                className="c10 c11"
              />
              <span
                className="c12 c13"
              >
                Green
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="c7"
      >
        <label
          className="c4 c8"
          hidden={false}
        >
          <span
            className="c5"
          >
            <div
              className="c2"
            >
              <input
                className="c9"
                name="example"
                type="radio"
                value="blue"
              />
              <div
                className="c10 c11"
              />
              <span
                className="c12 c13"
              >
                Blue
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="c7"
      >
        <label
          className="c4 c8"
          hidden={false}
        >
          <span
            className="c5"
          >
            <div
              className="c2"
            >
              <input
                className="c9"
                name="example"
                type="radio"
                value="yellow"
              />
              <div
                className="c10 c11"
              />
              <span
                className="c12 c13"
              >
                Yellow
              </span>
            </div>
          </span>
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Molecules / Input / Radio In a group with error 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -10px;
  margin-right: -10px;
}

.c6 > * {
  padding-left: 10px;
  padding-right: 10px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c15 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
  cursor: auto;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c11 {
  width: 18px;
  height: 18px;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c11::before,
.c11::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c11::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c11::after {
  width: 11px;
  height: 11px;
}

.c8 {
  position: relative;
}

.c8:hover .c10 {
  border-color: #4B4B46;
}

.c9 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c9:checked + .c10::after {
  background: #0046FF;
}

.c9[disabled] + .c10 {
  border-color: #EBEBE8;
}

.c9:checked[disabled] + .c10 {
  border-color: #EBEBE8;
}

.c9:checked[disabled] + .c10::after {
  background: #EBEBE8;
}

.c9 + .c10::before {
  border: 1px solid #FF1900;
}

.c9:focus + .c10::before {
  border: 1px solid #0046FF;
}

.c13 {
  padding-left: 8px;
  white-space: initial;
}

.c1 {
  padding: 0;
  margin: 0;
  border: 0;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c7 {
  width: auto;
  display: inline-block;
}

<div
  className="c0"
>
  <fieldset
    className="c1"
  >
    <div
      className="c2"
    >
      <legend
        className="NormalizedLegend__Legend-sc-1svgb20-0 c3 c4"
        hidden={false}
      >
        <span
          className="c5"
        >
          Colors 
        </span>
      </legend>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <label
          className="c4 c8"
          hidden={false}
        >
          <span
            className="c5"
          >
            <div
              className="c2"
            >
              <input
                className="c9"
                name="example"
                onChange={[Function]}
                required={true}
                type="radio"
                value="green"
              />
              <div
                className="c10 c11"
              />
              <span
                className="c12 c13"
              >
                Green
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="c7"
      >
        <label
          className="c4 c8"
          hidden={false}
        >
          <span
            className="c5"
          >
            <div
              className="c2"
            >
              <input
                className="c9"
                name="example"
                onChange={[Function]}
                required={true}
                type="radio"
                value="blue"
              />
              <div
                className="c10 c11"
              />
              <span
                className="c12 c13"
              >
                Blue
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="c7"
      >
        <label
          className="c4 c8"
          hidden={false}
        >
          <span
            className="c5"
          >
            <div
              className="c2"
            >
              <input
                className="c9"
                name="example"
                onChange={[Function]}
                required={true}
                type="radio"
                value="yellow"
              />
              <div
                className="c10 c11"
              />
              <span
                className="c12 c13"
              >
                Yellow
              </span>
            </div>
          </span>
        </label>
      </div>
    </div>
  </fieldset>
  <div>
    <span
      className="c14"
    >
      <div
        className="c15"
      >
        Error: 
      </div>
      This field is required
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules / Input / Radio In a group with tooltip (position top) 1`] = `
Array [
  <br />,
  <br />,
  .c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -10px;
  margin-right: -10px;
}

.c9 > * {
  padding-left: 10px;
  padding-right: 10px;
}

.c9 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c8 {
  stroke: #6E6E69;
}

.c3 {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
  cursor: auto;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c14 {
  width: 18px;
  height: 18px;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c14::before,
.c14::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c14::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c14::after {
  width: 11px;
  height: 11px;
}

.c11 {
  position: relative;
}

.c11:hover .c13 {
  border-color: #4B4B46;
}

.c12 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c12:checked + .c13::after {
  background: #0046FF;
}

.c12[disabled] + .c13 {
  border-color: #EBEBE8;
}

.c12:checked[disabled] + .c13 {
  border-color: #EBEBE8;
}

.c12:checked[disabled] + .c13::after {
  background: #EBEBE8;
}

.c12:focus + .c13::before {
  border: 1px solid #0046FF;
}

.c16 {
  padding-left: 8px;
  white-space: initial;
}

.c1 {
  padding: 0;
  margin: 0;
  border: 0;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c10 {
  width: auto;
  display: inline-block;
}

.c7 {
  margin-left: 4px;
}

<div
    className="c0"
  >
    <fieldset
      className="c1"
    >
      <div
        className="c2"
      >
        <legend
          className="NormalizedLegend__Legend-sc-1svgb20-0 c3 c4"
          hidden={false}
        >
          <span
            className="c5"
          >
            Colors 
          </span>
        </legend>
        <svg
          aria-hidden="true"
          className="c6 c7"
          focusable="false"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <g
            fillRule="evenodd"
            transform="translate(1 1)"
          >
            <circle
              className="c8"
              cx="11"
              cy="11"
              fill="none"
              r="11"
            />
            <path
              d="M9.4544,13.5528 L9.4544,13.3008 C9.4544,12.1584 9.4376,11.6376 11.1512,10.2432 C11.8904,9.6384 12.4784,9.2184 12.4784,8.496 C12.4784,7.8576 12.0248,7.3536 11.1176,7.3536 C10.1768,7.3536 9.656,7.9416 9.4376,8.6472 L6.9008,8.6472 C7.2368,6.3624 8.9504,5.1696 11.168,5.1696 C13.5032,5.1696 15.0992,6.4128 15.0992,8.3784 C15.0992,9.6888 14.5448,10.3776 13.0496,11.6544 C12.344,12.2424 11.84,12.6456 11.7056,13.3008 L11.6552,13.5528 L9.4544,13.5528 Z M11.9072,14.7288 L11.9072,17.4 L9.2696,17.4 L9.2696,14.7288 L11.9072,14.7288 Z"
              fillRule="nonzero"
            />
          </g>
        </svg>
      </div>
      <div
        className="c9"
      >
        <div
          className="c10"
        >
          <label
            className="c4 c11"
            hidden={false}
          >
            <span
              className="c5"
            >
              <div
                className="c2"
              >
                <input
                  className="c12"
                  name="example"
                  type="radio"
                  value="green"
                />
                <div
                  className="c13 c14"
                />
                <span
                  className="c15 c16"
                >
                  Green
                </span>
              </div>
            </span>
          </label>
        </div>
        <div
          className="c10"
        >
          <label
            className="c4 c11"
            hidden={false}
          >
            <span
              className="c5"
            >
              <div
                className="c2"
              >
                <input
                  className="c12"
                  name="example"
                  type="radio"
                  value="blue"
                />
                <div
                  className="c13 c14"
                />
                <span
                  className="c15 c16"
                >
                  Blue
                </span>
              </div>
            </span>
          </label>
        </div>
        <div
          className="c10"
        >
          <label
            className="c4 c11"
            hidden={false}
          >
            <span
              className="c5"
            >
              <div
                className="c2"
              >
                <input
                  className="c12"
                  name="example"
                  type="radio"
                  value="yellow"
                />
                <div
                  className="c13 c14"
                />
                <span
                  className="c15 c16"
                >
                  Yellow
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </div>,
]
`;

exports[`Storyshots Molecules / Input / Radio In a group with tooltip 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -10px;
  margin-right: -10px;
}

.c9 > * {
  padding-left: 10px;
  padding-right: 10px;
}

.c9 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c8 {
  stroke: #6E6E69;
}

.c3 {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
  cursor: auto;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c14 {
  width: 18px;
  height: 18px;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c14::before,
.c14::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c14::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c14::after {
  width: 11px;
  height: 11px;
}

.c11 {
  position: relative;
}

.c11:hover .c13 {
  border-color: #4B4B46;
}

.c12 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c12:checked + .c13::after {
  background: #0046FF;
}

.c12[disabled] + .c13 {
  border-color: #EBEBE8;
}

.c12:checked[disabled] + .c13 {
  border-color: #EBEBE8;
}

.c12:checked[disabled] + .c13::after {
  background: #EBEBE8;
}

.c12:focus + .c13::before {
  border: 1px solid #0046FF;
}

.c16 {
  padding-left: 8px;
  white-space: initial;
}

.c1 {
  padding: 0;
  margin: 0;
  border: 0;
}

.c0 {
  width: 200px;
  display: inline-block;
}

.c10 {
  width: auto;
  display: inline-block;
}

.c7 {
  margin-left: 4px;
}

<div
  className="c0"
>
  <fieldset
    className="c1"
  >
    <div
      className="c2"
    >
      <legend
        className="NormalizedLegend__Legend-sc-1svgb20-0 c3 c4"
        hidden={false}
      >
        <span
          className="c5"
        >
          Colors 
        </span>
      </legend>
      <svg
        aria-hidden="true"
        className="c6 c7"
        focusable="false"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <g
          fillRule="evenodd"
          transform="translate(1 1)"
        >
          <circle
            className="c8"
            cx="11"
            cy="11"
            fill="none"
            r="11"
          />
          <path
            d="M9.4544,13.5528 L9.4544,13.3008 C9.4544,12.1584 9.4376,11.6376 11.1512,10.2432 C11.8904,9.6384 12.4784,9.2184 12.4784,8.496 C12.4784,7.8576 12.0248,7.3536 11.1176,7.3536 C10.1768,7.3536 9.656,7.9416 9.4376,8.6472 L6.9008,8.6472 C7.2368,6.3624 8.9504,5.1696 11.168,5.1696 C13.5032,5.1696 15.0992,6.4128 15.0992,8.3784 C15.0992,9.6888 14.5448,10.3776 13.0496,11.6544 C12.344,12.2424 11.84,12.6456 11.7056,13.3008 L11.6552,13.5528 L9.4544,13.5528 Z M11.9072,14.7288 L11.9072,17.4 L9.2696,17.4 L9.2696,14.7288 L11.9072,14.7288 Z"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10"
      >
        <label
          className="c4 c11"
          hidden={false}
        >
          <span
            className="c5"
          >
            <div
              className="c2"
            >
              <input
                className="c12"
                name="example"
                type="radio"
                value="green"
              />
              <div
                className="c13 c14"
              />
              <span
                className="c15 c16"
              >
                Green
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="c10"
      >
        <label
          className="c4 c11"
          hidden={false}
        >
          <span
            className="c5"
          >
            <div
              className="c2"
            >
              <input
                className="c12"
                name="example"
                type="radio"
                value="blue"
              />
              <div
                className="c13 c14"
              />
              <span
                className="c15 c16"
              >
                Blue
              </span>
            </div>
          </span>
        </label>
      </div>
      <div
        className="c10"
      >
        <label
          className="c4 c11"
          hidden={false}
        >
          <span
            className="c5"
          >
            <div
              className="c2"
            >
              <input
                className="c12"
                name="example"
                type="radio"
                value="yellow"
              />
              <div
                className="c13 c14"
              />
              <span
                className="c15 c16"
              >
                Yellow
              </span>
            </div>
          </span>
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Molecules / Input / Radio On a coloured background 1`] = `
.c0 {
  padding: 20px;
  background-color: #EBEBE8;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  width: 18px;
  height: 18px;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c8::before,
.c8::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c8::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c8::after {
  width: 11px;
  height: 11px;
}

.c3 {
  position: relative;
}

.c3:hover .c7 {
  border-color: #4B4B46;
}

.c6 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c6:checked + .c7::after {
  background: #0046FF;
}

.c6[disabled] + .c7 {
  border-color: #EBEBE8;
}

.c6:checked[disabled] + .c7 {
  border-color: #EBEBE8;
}

.c6:checked[disabled] + .c7::after {
  background: #EBEBE8;
}

.c6:focus + .c7::before {
  border: 1px solid #0046FF;
}

.c10 {
  padding-left: 8px;
  white-space: initial;
}

.c1 {
  width: auto;
  display: inline-block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2 c3"
      hidden={false}
    >
      <span
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            className="c6"
            name="background"
            type="radio"
            value="background"
          />
          <div
            className="c7 c8"
          />
          <span
            className="c9 c10"
          >
            On a colored background
          </span>
        </div>
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Molecules / Input / Radio Required 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
  background-color: transparent;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

@media (min-width:760px) {
  .c1 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

<div
    className="c0"
  >
    <span
      className="c1"
    >
      Required
    </span>
  </div>,
  .c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  width: 18px;
  height: 18px;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c11::before,
.c11::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c11::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c11::after {
  width: 11px;
  height: 11px;
}

.c6 {
  position: relative;
}

.c6:hover .c10 {
  border-color: #4B4B46;
}

.c9 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c9:checked + .c10::after {
  background: #0046FF;
}

.c9[disabled] + .c10 {
  border-color: #EBEBE8;
}

.c9:checked[disabled] + .c10 {
  border-color: #EBEBE8;
}

.c9:checked[disabled] + .c10::after {
  background: #EBEBE8;
}

.c9:focus + .c10::before {
  border: 1px solid #0046FF;
}

.c13 {
  padding-left: 8px;
  white-space: initial;
}

.c4 {
  width: auto;
  display: inline-block;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {

}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
        >
          Default (without star)
        </span>
      </div>
      <div>
        <div
          className="c4"
        >
          <label
            className="c5 c6"
            hidden={false}
          >
            <span
              className="c7"
            >
              <div
                className="c8"
              >
                <input
                  className="c9"
                  name="example"
                  required={true}
                  type="radio"
                  value="green"
                />
                <div
                  className="c10 c11"
                />
                <span
                  className="c12 c13"
                >
                  Green
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
        >
          With star
        </span>
      </div>
      <div>
        <div
          className="c4"
        >
          <label
            className="c5 c6"
            hidden={false}
          >
            <span
              className="c7"
            >
              <div
                className="c8"
              >
                <input
                  className="c9"
                  name="example"
                  required={true}
                  type="radio"
                  value="green"
                />
                <div
                  className="c10 c11"
                />
                <span
                  className="c12 c13"
                >
                  Green *
                </span>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  margin-bottom: 32px;
  background-color: transparent;
}

@media (min-width:760px) {

}

<div
    className="c0"
  />,
]
`;

exports[`Storyshots Molecules / Input / Radio With all actions 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  width: 18px;
  height: 18px;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c7::before,
.c7::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c7::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c7::after {
  width: 11px;
  height: 11px;
}

.c2 {
  position: relative;
}

.c2:hover .c6 {
  border-color: #4B4B46;
}

.c5 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c5:checked + .c6::after {
  background: #0046FF;
}

.c5[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6::after {
  background: #EBEBE8;
}

.c5:focus + .c6::before {
  border: 1px solid #0046FF;
}

.c9 {
  padding-left: 8px;
  white-space: initial;
}

.c0 {
  width: auto;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1 c2"
    hidden={false}
  >
    <span
      className="c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          name="example6"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          type="radio"
          value="green"
        />
        <div
          className="c6 c7"
        />
        <span
          className="c8 c9"
        >
          Green
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Input / Radio With an error if not checked 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #FF1900;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c7 {
  width: 18px;
  height: 18px;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c7::before,
.c7::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c7::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c7::after {
  width: 11px;
  height: 11px;
}

.c2 {
  position: relative;
}

.c2:hover .c6 {
  border-color: #4B4B46;
}

.c5 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c5:checked + .c6::after {
  background: #0046FF;
}

.c5[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6::after {
  background: #EBEBE8;
}

.c5 + .c6::before {
  border: 1px solid #FF1900;
}

.c5:focus + .c6::before {
  border: 1px solid #0046FF;
}

.c9 {
  padding-left: 8px;
  white-space: initial;
}

.c0 {
  width: auto;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1 c2"
    hidden={false}
  >
    <span
      className="c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          name="example"
          onChange={[Function]}
          required={true}
          type="radio"
          value="green"
        />
        <div
          className="c6 c7"
        />
        <span
          className="c8 c9"
        >
          Green
        </span>
      </div>
    </span>
  </label>
  <div>
    <span
      className="c10"
    >
      <div
        className="c11"
      >
        Error: 
      </div>
      This field is required
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules / Input / Radio With auto focus 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  width: 18px;
  height: 18px;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c7::before,
.c7::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c7::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c7::after {
  width: 11px;
  height: 11px;
}

.c2 {
  position: relative;
}

.c2:hover .c6 {
  border-color: #4B4B46;
}

.c5 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c5:checked + .c6::after {
  background: #0046FF;
}

.c5[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6::after {
  background: #EBEBE8;
}

.c5:focus + .c6::before {
  border: 1px solid #0046FF;
}

.c9 {
  padding-left: 8px;
  white-space: initial;
}

.c0 {
  width: auto;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1 c2"
    hidden={false}
  >
    <span
      className="c3"
    >
      <div
        className="c4"
      >
        <input
          autoFocus={true}
          className="c5"
          name="example"
          type="radio"
          value="green"
        />
        <div
          className="c6 c7"
        />
        <span
          className="c8 c9"
        >
          Green
        </span>
      </div>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Input / Radio With checked (Controlled behaviour) 1`] = `
Array [
  .c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  width: 18px;
  height: 18px;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c7::before,
.c7::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c7::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c7::after {
  width: 11px;
  height: 11px;
}

.c2 {
  position: relative;
}

.c2:hover .c6 {
  border-color: #4B4B46;
}

.c5 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c5:checked + .c6::after {
  background: #0046FF;
}

.c5[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6::after {
  background: #EBEBE8;
}

.c5:focus + .c6::before {
  border: 1px solid #0046FF;
}

.c9 {
  padding-left: 8px;
  white-space: initial;
}

.c0 {
  width: auto;
  display: inline-block;
}

<div
    className="c0"
  >
    <label
      className="c1 c2"
      hidden={false}
    >
      <span
        className="c3"
      >
        <div
          className="c4"
        >
          <input
            checked={false}
            className="c5"
            name="example"
            onChange={[Function]}
            type="radio"
            value="green"
          />
          <div
            className="c6 c7"
          />
          <span
            className="c8 c9"
          >
            Green
          </span>
        </div>
      </span>
    </label>
  </div>,
  <button
    onClick={[Function]}
    type="button"
  >
    Toggle Checkbox
  </button>,
]
`;

exports[`Storyshots Molecules / Input / Radio With default checked 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  width: 18px;
  height: 18px;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  position: relative;
  border-radius: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c7::before,
.c7::after {
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c7::before {
  width: 100%;
  height: 100%;
  padding: 2px;
}

.c7::after {
  width: 11px;
  height: 11px;
}

.c2 {
  position: relative;
}

.c2:hover .c6 {
  border-color: #4B4B46;
}

.c5 {
  position: absolute;
  opacity: 0;
  height: 0;
  width: 0;
  cursor: pointer;
}

.c5:checked + .c6::after {
  background: #0046FF;
}

.c5[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6 {
  border-color: #EBEBE8;
}

.c5:checked[disabled] + .c6::after {
  background: #EBEBE8;
}

.c5:focus + .c6::before {
  border: 1px solid #0046FF;
}

.c9 {
  padding-left: 8px;
  white-space: initial;
}

.c0 {
  width: auto;
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1 c2"
    hidden={false}
  >
    <span
      className="c3"
    >
      <div
        className="c4"
      >
        <input
          className="c5"
          defaultChecked={true}
          name="example"
          type="radio"
          value="green"
        />
        <div
          className="c6 c7"
        />
        <span
          className="c8 c9"
        >
          Green
        </span>
      </div>
    </span>
  </label>
</div>
`;
